# QPU

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
asm/assembler/: asm.c  asm.h  disasm.c  lexer.h
asm/include/: lexer.h
asm/src/: asm.c  disasm.c  lexer.c
assembly/: lexer_test.s
include/: emu.h
include/assembler/: asm.h  lexer.h
include/emulator/: emu.h  tests.h
include/machine/: qpu8.h
includes/: emu.h  main.h  qpu.h  qpu8.h
lib/SDL3/lib/cmake/SDL3/: SDL3Config.cmake  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake
src/: emu.c  main.c  qpu-lib.h  qpu.c  qpu8.c
src/asm/: asm.c  disasm.c  lexer.c  test.c
src/emu/: emu.c  tests.c
src/machine/: qpu8.c
